* Oct 11 2000 hship

Change the interface for IPage and IComponent to allow a no-arguments constructor, and deprecate
the more complicated constructors.

* Oct 6 2000 hship

Service component didn't declare its formal context parameter in its specification.

* Oct 6 2000 hship

Fix the Hidden component to not throw NullPointerException if the listener parameter
is not bound.

* Oct 6 2000 hship

Re-introduce support for automatic onLoad method for the Body component.
Rename the TextField parameter "maximumWidth" to "maximumLength".
Make the Form component emit a name attribute, to faciliate JavaScript access
to the form and its elements.

* Oct 5 2000 hship

Minor documentation and JWC errors in the TextField component.

* Oct 4 2000 hship

Fix a NullPointerException in SimpleApplication.cleanupAfterRequest().  The exception may be thrown
if another exception is thrown earlier in the request cycle (before any page recoders are accessed).

* Oct 4 2000 hship

Revise Submit and ImageButton components to set a property if clicked, remove
listener parameters from Form-related components.

* Sep 26 2000 hship

Fix NullPointerException when the Home page does NOT throw an exception inside validate().

* Sep 25 2000 hship

Change the signature for AbstractApplication.cleanupAfterRequest to include the IRequestCycle.
Undo the [114878] fix, since it uses servlet 2.2 only API.

* Sep 24 2000 hship

[114878] com.primix.tapestry.context-path should be for context 

* Sep 24 2000 hship

[115140] Home service must validate()

* Sep 13 2000 hship

[114017] Rollovers no longer compatible with Navigator 

* Sep 12 2000 hship

More Javadoc for ShowInspector component.

* Sep 12 2000 hship

Beef up the ShowInspector component, adding default images and rollover images, and
add parameters to allow those to be overriden.
Remove the Java Source tab from the Inspector ... turns out that shipping Java code in the